# simulator_refac

./: .gitignore  Doxyfile  README.md  target_list copy.ini  target_list.ini
Airsuface_map/: Airsuface_map.csproj  Airsuface_map.sln  App.xaml  App.xaml.cs
ECC/: .gitignore  AckMessageTypes.h  CLSLaunchDlg.cpp  CLSLaunchDlg.h  CLSMoveDlg.cpp  CLSMoveDlg.h  CLaunchControlDlg.cpp  CLaunchControlDlg.h  CLeftBottomDlg.cpp  CLeftBottomDlg.h  CLeftTopDlg.cpp  CLeftTopDlg.h  CMFRModeSelectDlg.cpp  CMFRModeSelectDlg.h  CMissileInfoDlg.cpp  CMissileInfoDlg.h  CMockTrack.cpp  CMockTrack.h  CRightPaneDlg.cpp  CRightPaneDlg.h  CTargetInfoDlg.cpp  CTargetInfoDlg.h  CTargetListDlg.cpp  CTargetListDlg.h  CTestReceiverDlg.cpp  CTestReceiverDlg.h  ClassDiagram.cd  CommonMessage.h  CommonTypes.h  Config.cpp  Config.h  Deserializer.cpp  Deserializer.h  ECC_TCP.cpp  ECC_TCP.h  ECCconfig.ini  IReceiver.h  LCMessage.h  LCStatus.h  LSMessage.h  (+28 more)
LC/: CMakeLists.txt  DummyECC.cpp  DummyLS.cpp  DummyMFR.cpp  aa.puml  main.cpp  main.h
LC/Config/: LC.ini  LCConfig.cpp  LCConfig.h
LC/LC/: main.cpp
LC/LC/LC/comm/common/: IReceiver.h  IStatusSender.h  MessageParser.cpp  MessageParser.h  SenderType.h  Serializer.cpp
LC/LC/LC/comm/ls/: SerialLS.h
LC/LC/comm/common/: CommonMessage.h  IReceiverCallback.h  SystemStatus.h
LC/LC/comm/ls/: SerialLS.cpp  SerialLS_.cpp
LC/LC/comm/mfr/: TcpMFR.cpp
LC/comm/common/: CommandType.h  CommonMessage.h  IStatusSender.h  MessageParser.cpp  Serializer.cpp  Serializer.h  SystemStatus.h  temp.cpp
LC/comm/ecc/: TcpECC.cpp  TcpECC.h
LC/comm/ls/: SerialLS.cpp  SerialLS.h  SerialLS_.h
LC/comm/mfr/: TcpMFR.cpp  TcpMFR.h
LC/config/: system_config copy 2.ini  system_config copy.ini  system_config.ini
LC/core/: ENU_Translator.hpp  LCCommandHandler.cpp  LCCommandHandler.h  LCManager.cpp  LCManager.h  StatusLoader.cpp  StatusLoader.h  timeTrans.cpp  timeTrans.h
LC/inih/: INIReader.h  ini.c  ini.h
LC/status/: SystemStatus.h
LS/: CMakeLists.txt  LS.cpp  LS.h  LS.hpp  SerialReceiverInterface.h  SerialReceiverInterface.hpp  info.h  info.hpp  main.cpp
LS/comm_LC/: LCToLSCommFactory.cpp  LCToLSCommFactory.h  LCToLSCommFactory.hpp  LCToLSCommInterface.h  LCToLSCommManager.cpp  LCToLSCommManager.hpp
LS/comm_LC/serial/: LCToLSCommManager.cpp  LCToLSCommManager.h  LCToLSCommManager.hpp
LS/comm_LC/udp/: LCToLSCommUDPManager.cpp  LCToLSCommUDPManager.h  LCToLSCommUDPManager.hpp
LS/comm_SIM/: LSToSimCommManager.cpp  LSToSimCommManager.h  LSToSimCommManager.hpp
LS/config/: Config.hpp  ConfigParser.cpp  ConfigParser.h  firecontrol_config.ini  launcher_config.ini  main_config.ini  simulator_config.ini
LS/statusManager/: LSStatus.h  LSStatusManager.cpp  LSStatusManager.h  LSStatusManager.hpp
LS/statusManager/motorManager/: LSMotorManager.cpp  LSMotorManager.h  LSMotorManager.hpp  MotorManagerFactory.h  MotorManagerFactory.hpp  MotorManagerInterface.h
LS/statusManager/motorManager/testMotor/: TestMotorManager.h  TestMotorManager.hpp
MFR/: .gitignore
MFR/NewMFR/: CMakeLists.txt  main.cpp
MFR/NewMFR/CommManager/: IReceiver.h  MfrLcCommManager.cpp  MfrLcCommManager.h  MfrSimCommManager.cpp  MfrSimCommManager.h
MFR/NewMFR/Config/: MfrConfig.cpp  MfrConfig.h
MFR/NewMFR/Logger/: logger.cpp  logger.h
MFR/NewMFR/MFR/: Mfr.cpp  Mfr.h
MFR/NewMFR/StepMotorController/: StepMotorController.cpp  StepMotorController.h
MFR/RadarSystem/: CMakeLists.txt  IReceiver.hpp  Mfr.cpp  Mfr.hpp  MfrLcCommManager.cpp  MfrLcCommManager.hpp  MfrSimCommManager.cpp  MfrSimCommManager.hpp  MockMissile.hpp  MockTarget.hpp  PacketProtocol.hpp  StepMotorController.cpp  StepMotorController.hpp  build.sh  main.cpp
MFR/RadarSystem/config/: MFR.ini  MfrConfig.cpp  MfrConfig.h  ini.cpp  ini.h
MFR/refact/: .gitignore  CMakeLists.txt  Mfr.cpp  toolchain-arm.cmake
MFR/refact/communication/: MfrLcCommunicationManager.cpp  MfrLcCommunicationManager.h
MFR/refact/parsing/: MfrParsing.cpp  MfrParsing.h
MFR/refact/testServer/: CMakeLists.txt  TestServer.cpp
Simulator/: CMakeLists.txt  main.cpp
Simulator/Config/: Config.cpp  Config.h  Simulator.ini  target_list.ini
Simulator/Mock/: MockMissile.cpp  MockMissile.h  MockMissileManager.cpp  MockMissileManager.h  MockTarget.cpp  MockTarget.h  MockTargetManager.cpp  MockTargetManager.h  target_list.ini
Simulator/Mock/info/: MessageType.h  MissileInfo.h  TargetInfo.h
Simulator/Simulator/: Simulator.cpp  Simulator.h
Simulator/UDPCommunicate/: LSRecvUDPManager.cpp  LSRecvUDPManager.h  MFRSendUDPManager.cpp  MFRSendUDPManager.h
Test/Simulator/: CMakeLists.txt  LSRecvUDPManager.cpp  MFRSendUDPManager.cpp  MockMissileSimulator.cpp
Zynq-Moror/: CMakeLists.txt  Server.cpp  Server.h  main.cpp  uart.cpp  uart.h
html/: LSRecvUDPManager_8cpp.html  LSRecvUDPManager_8cpp__incl.map  LSRecvUDPManager_8cpp__incl.md5  LSRecvUDPManager_8h.html  LSRecvUDPManager_8h__dep__incl.map  LSRecvUDPManager_8h__dep__incl.md5  LSRecvUDPManager_8h__incl.map  LSRecvUDPManager_8h__incl.md5  LSRecvUDPManager_8h_source.html  MFRSendUDPManager_8cpp.html  MFRSendUDPManager_8cpp__incl.map  MFRSendUDPManager_8cpp__incl.md5  MFRSendUDPManager_8h.html  MFRSendUDPManager_8h__dep__incl.map  MFRSendUDPManager_8h__dep__incl.md5  MFRSendUDPManager_8h__incl.map  MFRSendUDPManager_8h__incl.md5  MFRSendUDPManager_8h_source.html  MissileInfo_8h.html  MissileInfo_8h__dep__incl.map  MissileInfo_8h__dep__incl.md5  MissileInfo_8h__incl.map  MissileInfo_8h__incl.md5  MissileInfo_8h_source.html  MockMissileManager_8cpp.html  MockMissileManager_8cpp__incl.map  MockMissileManager_8cpp__incl.md5  MockMissileManager_8h.html  MockMissileManager_8h__dep__incl.map  MockMissileManager_8h__dep__incl.md5  MockMissileManager_8h__incl.map  MockMissileManager_8h__incl.md5  MockMissileManager_8h_source.html  MockMissile_8cpp.html  MockMissile_8cpp__incl.map  MockMissile_8cpp__incl.md5  MockMissile_8h.html  (+105 more)
protocol/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Header1.cpp  Header1.h  Header2.cpp  Header2.h  Packet.cpp  Packet.h  PacketTypes.h  Payload2.cpp  Payload2.h  protocol  설명서.txt
(+318 files in other folders)
